--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,6 @@
     color: #FA7453;
     color: #191826;
     color: #FFB964;
-
 }
 
 * {
@@ -24,6 +23,7 @@ ul {
 
 body {
     font-family: 'IBM Plex Sans', sans-serif;
+    background-color: #FCFAF9;
 }
 
 button {
@@ -43,6 +43,7 @@ button {
     background-color: #FCFAF9;
     background-position-x: right -15rem;
     background-position-y: top -15rem;
+    max-width: 1920px;
 }
 
 .container-main {
@@ -60,7 +61,7 @@ button {
 }
 
 .container-main p {
-    margin-top: 1.5rem;
+    margin-top: 1.25rem;
     margin-bottom: 10rem;
     font-size: 1rem;
     line-height: 1.625rem;
@@ -90,10 +91,8 @@ article {
     position: relative;
     background-color: #FA7453;
     color: #FCFAF9;
-    /* padding-top: 2rem; */
     padding: 3rem 1.75rem;
     border-radius: 1rem;
-
 }
 
 h2 {
@@ -116,7 +115,6 @@ article p {
     align-content: center;
     font-size: 4.063rem;
     font-weight: 700;
-
 }
 
 .per-month {
@@ -130,9 +128,19 @@ article p {
     margin-bottom: 1rem;
 }
 
+.btn-ios:hover {
+    background-color: #66E2DC;
+    cursor: pointer;
+}
+
 .btn-android {
     background-color: #FCFAF9;
     color: #191826;
+}
+
+.btn-android:hover {
+    background-color: #FFB964;
+    cursor: pointer;
 }
 
 .img-btn {
@@ -147,7 +155,6 @@ footer {
 
 footer p {
     margin-top: 2.5rem;
-
 }
 
 .email {
@@ -165,6 +172,177 @@ footer ul {
 }
 
 footer li {
-    padding-left: .5rem;
-    padding-right: .5rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
+}
+
+svg:hover {
+    fill: #FA7453;
+}
+
+/* -------------------------------------------------media break--------------------------- */
+@media screen and (min-width: 740px) {
+    .container {
+        background-image: url("/images/bg-main-tablet.png");
+        background-repeat: no-repeat;
+        background-position-x: right -8rem;
+        background-position-y: top -15rem;
+        padding-left: 2.5rem;
+        padding-right: 2.5rem;
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 2.5fr 1fr;
+    }
+
+    .container-main {
+        padding-top: 4rem;
+        color: #191826;
+    }
+
+    .image-main {
+        display: grid;
+        justify-self: end;
+        margin-top: -2rem;
+        margin-right: -5rem;
+    }
+
+    .image-main img {
+        width: 16.625rem;
+        height: 25rem;
+    }
+
+    .container-main h1 {
+        margin-top: 5rem;
+        font-size: 4rem;
+        letter-spacing: -0.046rem;
+        line-height: 4rem;
+    }
+
+    .container-main p {
+        margin-bottom: 15rem;
+        font-size: 1.125rem;
+        line-height: 1.75rem;
+    }
+
+    .background {
+        margin-bottom: 12rem;
+        padding-bottom: 8.5rem;
+        border-radius: 1rem;
+    }
+
+    .phone-image {
+        position: absolute;
+        width: 16.875rem;
+        height: 34.75rem;
+        top: -8rem;
+        left: 12rem;
+    }
+
+    section {
+        position: relative;
+    }
+
+    article {
+        position: absolute;
+        width: 25rem;
+        height: 34.125rem;
+        right: 3.5rem;
+        top: 10rem;
+    }
+
+    footer {
+        padding-bottom: 5rem;
+    }
+
+    nav {
+        display: grid;
+        grid-template-columns: 2fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-template-areas:
+            "logo social"
+            "fine-print social";
+    }
+
+    .logo-bottom {
+        grid-area: logo;
+    }
+
+    .fine-print {
+        grid-area: fine-print;
+        margin-top: 0;
+    }
+
+    ul {
+        display: grid;
+        grid-area: social;
+        justify-self: end;
+        align-items: end;
+    }
+}
+
+/* ----------------------------------media break 2------------------------------------- */
+@media screen and (min-width: 1200px) {
+    .container {
+        background-image: url("/images/bg-main-desktop.png");
+        background-repeat: no-repeat;
+        background-position-x: right -8rem;
+        background-position-y: top -15rem;
+        padding-left: 8rem;
+        padding-right: 8rem;
+    }
+
+    .container-main h1 {
+        margin-top: 7.5rem;
+        font-size: 5.5rem;
+        line-height: 5.5rem;
+        letter-spacing: -0.063rem;
+    }
+
+    .container-main p {
+        margin-top: 2rem;
+        margin-bottom: 20rem;
+        font-size: 1.25rem;
+        line-height: 2.125rem;
+    }
+
+    .image-main {
+
+        display: grid;
+        justify-self: end;
+        margin-top: -2rem;
+        margin-right: -8rem;
+    }
+
+    .image-main img {
+        width: 19.5rem;
+        height: 29.25rem;
+    }
+
+    .phone-image {
+        position: absolute;
+        width: 19.5rem;
+        height: 40.125rem;
+        top: -14rem;
+        left: 18rem;
+    }
+
+    .pattern-2 {
+        margin-left: -22.5%;
+    }
+
+    article {
+        position: absolute;
+        width: 27.875rem;
+        height: 39.063rem;
+        right: 6rem;
+        top: 6rem;
+    }
+
+    nav {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr;
+        grid-template-areas: "logo fine-print social";
+    }
 }
